--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/multer": "^1.4.12",
     "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
