--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@tanstack/react-query": "^5.61.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.12",
     "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
