--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-router": "^0.0.1-alpha.1",
+    "@tanstack/react-router-devtools": "^0.0.1-alpha.1",
     "@types/multer": "^1.4.12",
     "@types/sharp": "^0.32.0",
     "class-variance-authority": "^0.7.0",
