--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-router": "^0.0.1-alpha.1",
     "@tanstack/react-router-devtools": "^0.0.1-alpha.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/sharp": "^0.32.0",
     "class-variance-authority": "^0.7.0",
@@ -60,6 +61,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
