--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
