--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-router": "^0.0.1-alpha.1",
     "@tanstack/react-router-devtools": "^0.0.1-alpha.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/sharp": "^0.32.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
