--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "@types/multer": "^1.4.12",
     "@types/sharp": "^0.32.0",
     "bcrypt": "^5.1.1",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "debug": "^4.3.7",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.3.0",
