--- a/package.json
+++ b/package.json
@@ -45,20 +45,19 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
-    "@tanstack/react-query": "^5.61.5",
+    "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-router": "^0.0.1-alpha.1",
     "@tanstack/react-router-devtools": "^0.0.1-alpha.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
-    "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.36.4",
+    "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.1",
@@ -72,33 +71,30 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "^4.17.21",
+    "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.17.8",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -107,8 +103,8 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
   },
   "optionalDependencies": {
