--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.4",
+    "react-router-dom": "^7.0.1",
     "recharts": "^2.13.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
