--- a/package.json
+++ b/package.json
@@ -49,21 +49,27 @@
     "@tanstack/react-router": "^0.0.1-alpha.1",
     "@tanstack/react-router-devtools": "^0.0.1-alpha.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "compression": "^1.7.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.11.17",
+    "helmet": "^8.0.0",
     "input-otp": "^1.2.4",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
@@ -71,6 +77,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -89,7 +96,7 @@
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
@@ -104,7 +111,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
   },
