--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
-    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query": "^5.62.0",
     "@types/sharp": "^0.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -52,7 +52,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -80,7 +80,7 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
@@ -90,8 +90,8 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.9",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
   },
   "optionalDependencies": {
