--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@tanstack/react-query": "^5.62.0",
     "@types/sharp": "^0.32.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
