--- a/package.json
+++ b/package.json
@@ -43,12 +43,11 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@tanstack/react-query": "^5.62.0",
     "@types/sharp": "^0.32.0",
-    "@vitejs/plugin-react-swc": "^3.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.36.4",
+    "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
@@ -57,7 +56,6 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
-    "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
@@ -69,7 +67,6 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
@@ -78,9 +75,9 @@
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "^4.17.21",
+    "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.17.9",
+    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.12",
@@ -92,7 +89,7 @@
     "esbuild": "^0.24.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
