--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@types/cors": "^2.8.17",
     "@types/sharp": "^0.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.29.1",
+    "dotenv": "^16.4.6",
+    "drizzle-orm": "^0.29.5",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
@@ -75,12 +78,12 @@
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
@@ -94,7 +97,7 @@
     "esbuild": "^0.24.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0"
