--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
     "@tanstack/react-query": "^5.62.0",
+    "@types/dotenv": "^8.2.3",
     "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.36.4",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.3.0",
